clusters/kubernetes/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-Ext-2018-06
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    # alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=my-access-log-bucket,access_logs.s3.prefix=my-app
spec:
  rules:
    # - host: ${mlflow_url}
    #   http:
    #     paths:
    #       - backend:
    #           serviceName: ssl-redirect
    #           servicePort: use-annotation
    #       - backend:
    #           serviceName: mlflow-server
    #           servicePort: 80
    - host: ${pachyderm_main_url}
      http:
        paths:
          - backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /ws
            backend:
              serviceName: dash
              servicePort: 8081
          - backend:
              serviceName: dash
              servicePort: 8080
    - host: ${pachyderm_ws_url}
      http:
        paths:
          - backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - backend:
              serviceName: dash
              servicePort: 8081
